# foodproductdetection

./: .gitattributes  Prediction_food_product project bar illan.ipynb  appproductdetection.py  copyappdetect.py  pyproject.toml
.ipynb_checkpoints/: Prediction_food_product project bar illan-checkpoint.ipynb
backups/: Prediction_food_product project bar illan (4).ipynb  Prediction_food_product project bar illan (6).ipynb
foodproduct/apple/: 83848108.cms  Depositphotos_3830886_xl-2015.jpg_fit=3504,2336&ssl=1  R219.png_resize=2880_1612&output-format=jpg&output-quality=85&interpolation=progressive-bicubic  apple-with-knife-dark-backgroundapple-with-knife-dark-backgrounda-red-apple-with-knife_1016228-5287.jpg_w=2000  czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvbHIvay1wLTIwNy1leWUtMDAyMzg5LmpwZw.jpg_s=Ogpi6sZDkT6bN2psSMkoTrrHSM_lzswnPISmNCe1r5w  fresh-red-apple-isolated-close-up_299651-32.jpg_w=2000  main-qimg-fb7583f1ad8216d1ffceb5292791bc60-c
foodproduct/banana/: 9i6hu1vuw6ry.jpg_auto=webp&s=0a108c7968c898a5a4e78b22245f2f50ebfdebb8  banana-slices-isolated-white-background-piece-banana-close-up_362171-1008.jpg_w=2000  bananas-at-supermarket-austockphoto-000051554.JPG_v=1.3.0  sliced-banana-picture-id495671828_k=6&m=495671828&s=612x612&w=0&h=qalrIEHHeV1CGWqtn0FBhkz0j3goZ01CJejiOTXG6P8=  slicing-peeled-banana-picture-id636598282_k=6&m=636598282&s=612x612&w=0&h=cZOg9MpubM2IqY-_BdbGiSBF3_g09DUBFdU8DXX5mSM=
foodproduct/broccoli/: broccoli.jpg_s=612x612&w=gi&k=20&c=z4X31JbzF2O248AKvkRDyLenLBmW8KbV7vwiL3InWeQ=  (+3 more)
foodproduct/carrot/: 520_x700.png_v=1492721982  (+8 more)
(+20 files in other folders)
