[tool.poetry]
name = "product-detection"
version = "0.1.0"
description = "A Streamlit app for detecting products in images."
authors = ["wweavishayaknin <WWEAVISHAYAKNIN@GMAIL.COM>"]
readme = "README.md"
packages = [{ include = "product_detection" }]  # Adjust this based on your package structure

[tool.poetry.dependencies]
python = "^3.12"
fastai = "^2.7.18"
duckduckgo-search = "^6.3.3"
timm = "^1.0.11"
seaborn = "^0.13.2"
streamlit = "^1.39.0"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.5"
langchain-groq = "^0.2.1"
decord = "^0.6.0"
opencv-contrib-python = "^4.10.0.84"
opencv-python-headless = "^4.10.0.84"
opencv-python = "^4.10.0.84"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
